--- a/scaleway/testdata/vpc-public-gateway-dhcp-basic.cassette.yaml
+++ b/scaleway/testdata/vpc-public-gateway-dhcp-basic.cassette.yaml
@@ -2,27 +2,27 @@
 version: 1
 interactions:
 - request:
-    body: '{"project_id":"105bdce1-64c0-48ab-899d-868455867ecf","subnet":"192.168.1.0/24","address":null,"pool_low":null,"pool_high":null,"enable_dynamic":false,"valid_lifetime":null,"renew_timer":null,"rebind_timer":null,"push_default_route":false,"push_dns_server":null,"dns_servers_override":null,"dns_search":null,"dns_local_name":null}'
+    body: '{"project_id":"105bdce1-64c0-48ab-899d-868455867ecf","subnet":"192.168.1.0/24","address":null,"pool_low":null,"pool_high":null,"enable_dynamic":true,"valid_lifetime":null,"renew_timer":null,"rebind_timer":null,"push_default_route":true,"push_dns_server":null,"dns_servers_override":null,"dns_search":null,"dns_local_name":null}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps
     method: POST
   response:
-    body: '{"id":"5fd6e446-23b9-4965-8940-2b4358ab51e0","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-14T15:11:50.343266Z","updated_at":"2021-12-14T15:11:50.343266Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":false,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":false,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"282a7334-89b0-4148-ba66-5db32dd977f5","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-01-27T14:15:57.103567Z","updated_at":"2022-01-27T14:15:57.103567Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "570"
+      - "568"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 14 Dec 2021 15:11:50 GMT
+      - Thu, 27 Jan 2022 14:15:57 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -32,7 +32,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 78fddbd3-275e-4f20-93b3-30aaab7b02f0
+      - 00839e8a-4aff-4a4a-bb77-060547284fc7
     status: 200 OK
     code: 200
     duration: ""
@@ -41,21 +41,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/5fd6e446-23b9-4965-8940-2b4358ab51e0
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
     method: GET
   response:
-    body: '{"id":"5fd6e446-23b9-4965-8940-2b4358ab51e0","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-14T15:11:50.343266Z","updated_at":"2021-12-14T15:11:50.343266Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":false,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":false,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"282a7334-89b0-4148-ba66-5db32dd977f5","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-01-27T14:15:57.103567Z","updated_at":"2022-01-27T14:15:57.103567Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "570"
+      - "568"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 14 Dec 2021 15:11:50 GMT
+      - Thu, 27 Jan 2022 14:15:57 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -65,7 +65,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b9f481b5-3696-45dc-a162-aba53485dea6
+      - af1d2d84-eb18-4dd9-8ac7-cd0e6b6ca499
     status: 200 OK
     code: 200
     duration: ""
@@ -74,21 +74,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/5fd6e446-23b9-4965-8940-2b4358ab51e0
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
     method: GET
   response:
-    body: '{"id":"5fd6e446-23b9-4965-8940-2b4358ab51e0","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-14T15:11:50.343266Z","updated_at":"2021-12-14T15:11:50.343266Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":false,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":false,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"282a7334-89b0-4148-ba66-5db32dd977f5","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-01-27T14:15:57.103567Z","updated_at":"2022-01-27T14:15:57.103567Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "570"
+      - "568"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 14 Dec 2021 15:11:50 GMT
+      - Thu, 27 Jan 2022 14:15:57 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -98,7 +98,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 5c5378f7-8745-42a5-9ce4-0974cd468309
+      - 64aaabf5-21c2-4bcc-8ec1-57f01af6dc35
     status: 200 OK
     code: 200
     duration: ""
@@ -107,21 +107,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/5fd6e446-23b9-4965-8940-2b4358ab51e0
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
     method: GET
   response:
-    body: '{"id":"5fd6e446-23b9-4965-8940-2b4358ab51e0","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-14T15:11:50.343266Z","updated_at":"2021-12-14T15:11:50.343266Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":false,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":false,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"282a7334-89b0-4148-ba66-5db32dd977f5","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-01-27T14:15:57.103567Z","updated_at":"2022-01-27T14:15:57.103567Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "570"
+      - "568"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 14 Dec 2021 15:11:50 GMT
+      - Thu, 27 Jan 2022 14:15:57 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -131,7 +131,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 8fb9ba83-7e51-447d-8f66-ab4c22dac4f5
+      - 76bb017d-a375-4f55-83d2-5f505a0f1469
     status: 200 OK
     code: 200
     duration: ""
@@ -140,9 +140,9 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/5fd6e446-23b9-4965-8940-2b4358ab51e0
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
     method: DELETE
   response:
     body: ""
@@ -152,7 +152,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 14 Dec 2021 15:11:51 GMT
+      - Thu, 27 Jan 2022 14:15:58 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -162,7 +162,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 2a7264c2-09b3-4e73-8682-dbfa8e646627
+      - 092e54d6-b25f-423d-a9e5-6982574d85c5
     status: 204 No Content
     code: 204
     duration: ""
@@ -171,12 +171,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/5fd6e446-23b9-4965-8940-2b4358ab51e0
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
     method: GET
   response:
-    body: '{"message":"resource is not found","resource":"dhcp","resource_id":"5fd6e446-23b9-4965-8940-2b4358ab51e0","type":"not_found"}'
+    body: '{"message":"resource is not found","resource":"dhcp","resource_id":"282a7334-89b0-4148-ba66-5db32dd977f5","type":"not_found"}'
     headers:
       Content-Length:
       - "125"
@@ -185,7 +185,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 14 Dec 2021 15:11:51 GMT
+      - Thu, 27 Jan 2022 14:15:58 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -195,7 +195,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - e29f402b-5387-4909-9191-70c41d529cfe
+      - c35e0cc0-319d-4762-851d-31e487b5b31d
     status: 404 Not Found
     code: 404
     duration: ""
