--- a/scaleway/testdata/vpc-public-gateway-dhcp-basic.cassette.yaml
+++ b/scaleway/testdata/vpc-public-gateway-dhcp-basic.cassette.yaml
@@ -2,18 +2,18 @@
 version: 1
 interactions:
 - request:
-    body: '{"project_id":"105bdce1-64c0-48ab-899d-868455867ecf","subnet":"192.168.1.0/24","address":null,"pool_low":null,"pool_high":null,"enable_dynamic":true,"valid_lifetime":null,"renew_timer":null,"rebind_timer":null,"push_default_route":true,"push_dns_server":null,"dns_servers_override":null,"dns_search":null,"dns_local_name":null}'
+    body: '{"project_id":"105bdce1-64c0-48ab-899d-868455867ecf","subnet":"192.168.1.0/24","address":null,"pool_low":null,"pool_high":null,"enable_dynamic":null,"valid_lifetime":null,"renew_timer":null,"rebind_timer":null,"push_default_route":null,"push_dns_server":null,"dns_servers_override":null,"dns_search":null,"dns_local_name":null}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps
     method: POST
   response:
-    body: '{"id":"282a7334-89b0-4148-ba66-5db32dd977f5","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-01-27T14:15:57.103567Z","updated_at":"2022-01-27T14:15:57.103567Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:17.367729Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "568"
@@ -22,7 +22,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 27 Jan 2022 14:15:57 GMT
+      - Wed, 30 Mar 2022 13:28:17 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -32,7 +32,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 00839e8a-4aff-4a4a-bb77-060547284fc7
+      - 654c01af-2db4-4aeb-ab6a-697247239fe1
     status: 200 OK
     code: 200
     duration: ""
@@ -41,12 +41,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
     method: GET
   response:
-    body: '{"id":"282a7334-89b0-4148-ba66-5db32dd977f5","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-01-27T14:15:57.103567Z","updated_at":"2022-01-27T14:15:57.103567Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:17.367729Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "568"
@@ -55,7 +55,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 27 Jan 2022 14:15:57 GMT
+      - Wed, 30 Mar 2022 13:28:17 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -65,7 +65,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - af1d2d84-eb18-4dd9-8ac7-cd0e6b6ca499
+      - e4b7094c-80bc-44bf-b16a-fdbad4e73629
     status: 200 OK
     code: 200
     duration: ""
@@ -74,12 +74,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
     method: GET
   response:
-    body: '{"id":"282a7334-89b0-4148-ba66-5db32dd977f5","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-01-27T14:15:57.103567Z","updated_at":"2022-01-27T14:15:57.103567Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:17.367729Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "568"
@@ -88,7 +88,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 27 Jan 2022 14:15:57 GMT
+      - Wed, 30 Mar 2022 13:28:17 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -98,7 +98,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 64aaabf5-21c2-4bcc-8ec1-57f01af6dc35
+      - ffb44a5f-a9ca-4453-90da-7a8c6c5aafb9
     status: 200 OK
     code: 200
     duration: ""
@@ -107,12 +107,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
     method: GET
   response:
-    body: '{"id":"282a7334-89b0-4148-ba66-5db32dd977f5","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-01-27T14:15:57.103567Z","updated_at":"2022-01-27T14:15:57.103567Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:17.367729Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "568"
@@ -121,7 +121,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 27 Jan 2022 14:15:57 GMT
+      - Wed, 30 Mar 2022 13:28:17 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -131,7 +131,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 76bb017d-a375-4f55-83d2-5f505a0f1469
+      - b1a856a9-88d7-4a3b-b6e1-74f30930c68c
     status: 200 OK
     code: 200
     duration: ""
@@ -140,9 +140,176 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
+    method: GET
+  response:
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:17.367729Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    headers:
+      Content-Length:
+      - "568"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 30 Mar 2022 13:28:18 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 50778021-7e4f-4f91-936b-026e574416c4
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: '{"subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.2","enable_dynamic":false,"valid_lifetime":"3000.000000000s","renew_timer":"2000.000000000s","rebind_timer":"2060.000000000s","push_default_route":false,"push_dns_server":false,"dns_servers_override":null,"dns_search":null,"dns_local_name":"priv"}'
+    form: {}
+    headers:
+      Content-Type:
+      - application/json
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
+    method: PATCH
+  response:
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:18.505145Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.2","enable_dynamic":false,"valid_lifetime":"3000s","renew_timer":"2000s","rebind_timer":"2060s","push_default_route":false,"push_dns_server":false,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    headers:
+      Content-Length:
+      - "569"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 30 Mar 2022 13:28:18 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 36edf351-d5d1-471e-9c1c-106484345592
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
+    method: GET
+  response:
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:18.505145Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.2","enable_dynamic":false,"valid_lifetime":"3000s","renew_timer":"2000s","rebind_timer":"2060s","push_default_route":false,"push_dns_server":false,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    headers:
+      Content-Length:
+      - "569"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 30 Mar 2022 13:28:18 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - e96ecbf1-92fb-4762-b3a9-4811e9fa7f75
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
+    method: GET
+  response:
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:18.505145Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.2","enable_dynamic":false,"valid_lifetime":"3000s","renew_timer":"2000s","rebind_timer":"2060s","push_default_route":false,"push_dns_server":false,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    headers:
+      Content-Length:
+      - "569"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 30 Mar 2022 13:28:18 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 824993c7-1ecd-4897-931f-c216f145378f
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
+    method: GET
+  response:
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:18.505145Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.2","enable_dynamic":false,"valid_lifetime":"3000s","renew_timer":"2000s","rebind_timer":"2060s","push_default_route":false,"push_dns_server":false,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    headers:
+      Content-Length:
+      - "569"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 30 Mar 2022 13:28:19 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 297b855f-669b-4434-b944-8d72bed95679
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
     method: DELETE
   response:
     body: ""
@@ -152,7 +319,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 27 Jan 2022 14:15:58 GMT
+      - Wed, 30 Mar 2022 13:28:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -162,7 +329,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 092e54d6-b25f-423d-a9e5-6982574d85c5
+      - 4c3b1c25-589d-42f1-b2d2-afb6580bbf45
     status: 204 No Content
     code: 204
     duration: ""
@@ -171,12 +338,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
     method: GET
   response:
-    body: '{"message":"resource is not found","resource":"dhcp","resource_id":"282a7334-89b0-4148-ba66-5db32dd977f5","type":"not_found"}'
+    body: '{"message":"resource is not found","resource":"dhcp","resource_id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","type":"not_found"}'
     headers:
       Content-Length:
       - "125"
@@ -185,7 +352,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 27 Jan 2022 14:15:58 GMT
+      - Wed, 30 Mar 2022 13:28:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -195,7 +362,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - c35e0cc0-319d-4762-851d-31e487b5b31d
+      - 8150e286-77d1-435c-a30f-ca1b0b2beb7e
     status: 404 Not Found
     code: 404
     duration: ""
